--- a/main.ipynb
+++ b/main.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "gmtTime: str = lambda tz: datetime.now(\n",
-    "    pytz.timezone(tz)).strftime(\"%H : %M : %S\")\n",
+    "    pytz.timezone(tz)).strftime(\"%I:%M:%S %p\")\n",
     "\n",
     "checkStatus = lambda bot: bot.find_element(By.XPATH, ppsXpath)  # Status Circle around profile picture\n",
     "\n",
