fix: Update application title in main notebook and controller
- Changed title from "WhatsApp Status Viewer" to "Whatsapp Status Checker"

--- a/src/whatsapp-status-checker/main.ipynb
+++ b/src/whatsapp-status-checker/main.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "# Setup application\n",
     "set_default(\"fancy99\")\n",
-    "tprint(\"WhatsApp Status Viewer\", 'rectangles')\n",
+    "tprint(\"Whatsapp Status Checker\", 'rectangles')\n",
     "tprint(\"Using Modular Architecture ✨\")"
    ]
   },
