refactor: rename src WhatsApp Status Checker
- Renamed `src/whatsapp-status-checker` to  `src/whatsapp_status_checker` for best package structure convention

--- a/src/whatsapp_status_checker/main.ipynb
+++ b/src/whatsapp_status_checker/main.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# Import the modular components\n",
-    "from config import NUMBER, CALLMEBOT_APIKEY, status_uploader_name, timezone\n",
+    "from config import NUMBER, CALLMEBOT_APIKEY, STATUS_UPLOADER_NAME, timezone\n",
     "from core.app_controller import WhatsAppStatusApp\n",
     "from utils import ensure_chromedriver\n",
     "from art import set_default, tprint"
@@ -32,7 +32,7 @@
     "# Configuration is now handled by the config module\n",
     "# All environment variables are loaded automatically\n",
     "print(f\"Phone Number: {NUMBER}\")\n",
-    "print(f\"Contact Name: {status_uploader_name}\")\n",
+    "print(f\"Contact Name: {STATUS_UPLOADER_NAME}\")\n",
     "print(f\"Timezone: {timezone}\")"
    ]
   },
@@ -109,7 +109,7 @@
     "ensure_chromedriver()\n",
     "\n",
     "# Create the application instance\n",
-    "app = WhatsAppStatusApp(NUMBER, CALLMEBOT_APIKEY, status_uploader_name, timezone)\n",
+    "app = WhatsAppStatusApp(NUMBER, CALLMEBOT_APIKEY, STATUS_UPLOADER_NAME, timezone)\n",
     "\n",
     "print(\"Application initialized successfully!\")\n",
     "print(\"Ready to run WhatsApp Status Checker...\")\n",
